pbc_contract_codegen/tests/action/fail/zk/missing_zk_init_arg_for_action.stderr
error[E0080]: evaluation of constant value failed
  --> tests/action/fail/zk/missing_zk_init_arg_for_action.rs:13:1
   |
13 | #[action(zk = true)]
   | ^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'action cannot be zk if the init function is not zk. Consider using #[init(zk = true)]', $DIR/tests/action/fail/zk/missing_zk_init_arg_for_action.rs:13:1
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)
